// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Messages > A message is removed if the modal is closed 1`] = `
.emotion-0 {
  position: fixed;
  width: 80%;
  max-width: 800px;
  top: 50px;
  left: 0;
  right: 0;
  z-index: 500;
  margin: 0 auto;
}

.emotion-1 {
  position: fixed;
  inset: 0;
  background: rgba(1, 1, 1, 0.3);
  z-index: 499;
  -webkit-animation-duration: var(--duration);
  animation-duration: var(--duration);
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
}

.emotion-1[data-state="open"] {
  -webkit-animation-name: overlayFadeIn;
  animation-name: overlayFadeIn;
}

.emotion-1[data-state="closed"] {
  -webkit-animation-name: overlayFadeOut;
  animation-name: overlayFadeOut;
}

.emotion-3 {
  --margin: 0px;
  position: fixed;
  inset: 0;
  margin: auto;
  z-index: 500;
  height: -webkit-min-content;
  height: -moz-min-content;
  height: min-content;
  max-height: 85%;
  max-width: 95%;
  overflow-y: auto;
  background-color: #fff;
  padding-bottom: env(safe-area-inset-bottom);
  padding-top: env(safe-area-inset-top);
  padding-left: env(safe-area-inset-left);
  padding-right: env(safe-area-inset-right);
  -webkit-animation-duration: var(--duration);
  animation-duration: var(--duration);
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
}

@media (min-width: 37.5625em) {
  .emotion-3[data-margin="small"] {
    --margin: 24px;
  }
}

.emotion-3[data-position="top"] {
  top: var(--margin);
  bottom: unset;
}

.emotion-3[data-position="bottom"] {
  bottom: var(--margin);
  top: unset;
}

.emotion-3[data-position="left"] {
  left: var(--margin);
  right: unset;
}

.emotion-3[data-position="right"] {
  right: var(--margin);
  left: unset;
}

.emotion-3[data-size="full"] {
  min-height: 100%;
  min-width: 100%;
  inset: 0;
}

.emotion-3[data-width="xsmall"],
.emotion-3[data-size="xsmall"] {
  width: 300px;
}

.emotion-3[data-width="small"],
.emotion-3[data-size="small"] {
  width: 500px;
}

.emotion-3[data-width="normal"],
.emotion-3[data-size="normal"] {
  width: 700px;
}

.emotion-3[data-width="large"],
.emotion-3[data-size="large"] {
  width: 1100px;
}

.emotion-3[data-width="full"] {
  width: 100%;
  min-width: 100%;
  left: 0;
  right: 0;
}

.emotion-3[data-height="xsmall"] {
  height: 300px;
}

.emotion-3[data-height="small"] {
  height: 500px;
}

.emotion-3[data-height="normal"] {
  height: 700px;
}

.emotion-3[data-height="large"] {
  height: 1100px;
}

.emotion-3[data-height="full"] {
  height: 100%;
  min-height: 100%;
  top: 0;
  bottom: 0;
}

.emotion-3[data-expands="true"] {
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  height: -webkit-min-content;
  height: -moz-min-content;
  height: min-content;
  max-width: 100%;
  max-height: 100%;
}

.emotion-3[data-animation-name="fade"][data-state="open"] {
  -webkit-animation-name: modalFadeIn;
  animation-name: modalFadeIn;
}

.emotion-3[data-animation-name="fade"][data-state="closed"] {
  -webkit-animation-name: modalFadeOut;
  animation-name: modalFadeOut;
}

.emotion-3[data-animation-name="zoom"][data-state="open"] {
  -webkit-animation-name: modalZoomIn;
  animation-name: modalZoomIn;
}

.emotion-3[data-animation-name="zoom"][data-state="closed"] {
  -webkit-animation-name: modalZoomOut;
  animation-name: modalZoomOut;
}

.emotion-3[data-animation-name="subtle"][data-state="open"] {
  -webkit-animation-name: modalSubtleIn;
  animation-name: modalSubtleIn;
}

.emotion-3[data-animation-name="subtle"][data-state="closed"] {
  -webkit-animation-name: modalSubtleOut;
  animation-name: modalSubtleOut;
}

.emotion-3[data-animation-name="slideIn"][data-position="top"][data-state="open"] {
  -webkit-animation-name: modalSlideTopIn;
  animation-name: modalSlideTopIn;
}

.emotion-3[data-animation-name="slideIn"][data-position="top"][data-state="closed"] {
  -webkit-animation-name: modalSlideTopOut;
  animation-name: modalSlideTopOut;
}

.emotion-3[data-animation-name="slideIn"][data-position="right"][data-state="open"] {
  -webkit-animation-name: modalSlideRightIn;
  animation-name: modalSlideRightIn;
}

.emotion-3[data-animation-name="slideIn"][data-position="right"][data-state="closed"] {
  -webkit-animation-name: modalSlideRightOut;
  animation-name: modalSlideRightOut;
}

.emotion-3[data-animation-name="slideIn"][data-position="bottom"][data-state="open"] {
  -webkit-animation-name: modalSlideBottomIn;
  animation-name: modalSlideBottomIn;
}

.emotion-3[data-animation-name="slideIn"][data-position="bottom"][data-state="closed"] {
  -webkit-animation-name: modalSlideBottomOut;
  animation-name: modalSlideBottomOut;
}

.emotion-3[data-animation-name="slideIn"][data-position="left"][data-state="open"] {
  -webkit-animation-name: modalSlideLeftIn;
  animation-name: modalSlideLeftIn;
}

.emotion-3[data-animation-name="slideIn"][data-position="left"][data-state="closed"] {
  -webkit-animation-name: modalSlideLeftOut;
  animation-name: modalSlideLeftOut;
}

@media (max-width: 37.5625em) {
  .emotion-3 {
    min-width: 100%;
    min-height: 100%;
  }
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
  padding: 24px;
}

.emotion-5[data-severity="success"] {
  background-color: #5cbc80;
  color: #fff;
}

.emotion-5[data-severity="info"] {
  background-color: #fff;
  color: #444;
}

.emotion-5[data-severity="warning"] {
  background-color: #ead854;
  color: #444;
}

.emotion-5[data-severity="danger"] {
  background-color: #d1372e;
  color: #fff;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-6 h1 {
  color: #fff;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  padding: 24px;
}

.emotion-7 h1 {
  margin: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 700;
  font-size: 22px;
  font-size: 1.2222222222222223rem;
  line-height: 1.2;
  color: #444;
}

.emotion-7 h1:where([lang='zh'], .emotion-7 h1[lang='zh-Hans'], [lang='zh-Hant']):not([data-pinyin]) {
  font-size: calc(22px * 1.11);
  font-size: calc(1.2222222222222223rem * 1.11);
}

.emotion-9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0;
  color: #fff;
}

.emotion-9[data-severity="info"] {
  color: #444;
}

.emotion-9[data-severity="warning"] {
  color: #444;
}

.emotion-10 svg {
  color: #fff;
}

.emotion-10 svg[data-severity="info"] {
  color: #444;
}

.emotion-10 svg[data-severity="warning"] {
  color: #444;
}

.emotion-10:hover,
.emotion-10:focus,
.emotion-10:focus-within,
.emotion-10:focus-visible {
  background-color: #fff;
}

.emotion-10:hover svg,
.emotion-10:focus svg,
.emotion-10:focus-within svg,
.emotion-10:focus-visible svg {
  color: #20588f;
}

.emotion-11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6px;
  color: #20588f;
  background: #deebf6;
  border: 2px solid #deebf6;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4px 6px;
  font-size: 14px;
  font-size: 0.7777777777777778rem;
  line-height: 18px;
  min-height: 32px;
  border-width: 1px;
  outline-width: 2px;
  color: #20588f;
  background: transparent;
  border-color: transparent;
  border-radius: 100%;
  padding: 6px;
  line-height: 1;
  border-color: transparent;
  min-height: unset;
}

.emotion-11:hover,
.emotion-11:focus-visible {
  color: #fff;
  background-color: #20588f;
  border-color: #20588f;
}

.emotion-11[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-11:where([lang='zh'], .emotion-11[lang='zh-Hans'], [lang='zh-Hant']):not([data-pinyin]) {
  font-size: calc(14px * 1.11);
  font-size: calc(0.7777777777777778rem * 1.11);
}

.emotion-11:hover,
.emotion-11:active,
.emotion-11:focus-visible {
  color: #20588f;
  background: #deebf6;
  border-color: #deebf6;
}

.emotion-11[disabled] {
  color: #777777;
  background-color: transparent;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-11 svg {
  width: 24px;
  height: 24px;
  margin: 0;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
}

.emotion-13 {
  width: 27px;
  height: 27px;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin-top: 12px;
}

<body
  style="pointer-events: none;"
>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <div
      class="emotion-0"
    />
  </div>
  <div
    aria-hidden="true"
    class="emotion-1 emotion-2"
    data-aria-hidden="true"
    data-state="open"
    style="pointer-events: auto; --duration: 400ms;"
  />
  <div
    aria-describedby="radix-:rb:"
    aria-labelledby="radix-:ra:"
    class="emotion-3 emotion-4"
    data-animation-name="zoom"
    data-margin="small"
    data-position="center"
    data-size="normal"
    data-state="open"
    id="radix-:r9:"
    role="dialog"
    style="--duration: 400ms; pointer-events: auto;"
    tabindex="-1"
  >
    <div
      class="emotion-5"
      data-severity="danger"
      data-testid="alert-modal"
    >
      <div
        class="emotion-6 emotion-7 emotion-8"
        data-testid="modal-header"
      >
        <h1
          class="emotion-9"
          data-severity="danger"
        >
          Pass på!
        </h1>
        <button
          aria-label="Lukk"
          class="emotion-10 emotion-11"
          data-testid="closeAlert"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="d_inline-block fill_currentcolor va_middle lh_1em flex-sh_0 w_medium h_medium"
            data-icon=""
            data-license="Apache License 2.0"
            data-severity="danger"
            data-source="RemixIcon"
            fill="currentColor"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="m12 10.59 4.95-4.95 1.41 1.41L13.41 12l4.95 4.95-1.41 1.41L12 13.41l-4.95 4.95-1.41-1.41L10.59 12 5.64 7.05l1.41-1.41z"
            />
          </svg>
        </button>
      </div>
      <div
        class="emotion-12"
      >
        <svg
          aria-hidden="true"
          class="d_inline-block fill_currentcolor va_middle lh_1em flex-sh_0 w_medium h_medium emotion-13"
          data-icon=""
          data-license="Apache License 2.0"
          data-source="Material Design"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm1-5a10 10 0 1 0 0 20 10 10 0 0 0 0-20m0 18a8 8 0 1 1 0-16 8 8 0 0 1 0 16"
          />
        </svg>
        Testmessage
      </div>
      <div
        class="emotion-14"
      />
    </div>
  </div>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;

exports[`Messages > A message is removed if the modal is closed 2`] = `
.emotion-0 {
  position: fixed;
  width: 80%;
  max-width: 800px;
  top: 50px;
  left: 0;
  right: 0;
  z-index: 500;
  margin: 0 auto;
  display: none;
}

<body
  style=""
>
  <div>
    <div
      class="emotion-0"
    />
  </div>
</body>
`;

exports[`Messages > A single message renders correctly 1`] = `
.emotion-0 {
  position: fixed;
  width: 80%;
  max-width: 800px;
  top: 50px;
  left: 0;
  right: 0;
  z-index: 500;
  margin: 0 auto;
}

.emotion-1 {
  position: fixed;
  inset: 0;
  background: rgba(1, 1, 1, 0.3);
  z-index: 499;
  -webkit-animation-duration: var(--duration);
  animation-duration: var(--duration);
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
}

.emotion-1[data-state="open"] {
  -webkit-animation-name: overlayFadeIn;
  animation-name: overlayFadeIn;
}

.emotion-1[data-state="closed"] {
  -webkit-animation-name: overlayFadeOut;
  animation-name: overlayFadeOut;
}

.emotion-3 {
  --margin: 0px;
  position: fixed;
  inset: 0;
  margin: auto;
  z-index: 500;
  height: -webkit-min-content;
  height: -moz-min-content;
  height: min-content;
  max-height: 85%;
  max-width: 95%;
  overflow-y: auto;
  background-color: #fff;
  padding-bottom: env(safe-area-inset-bottom);
  padding-top: env(safe-area-inset-top);
  padding-left: env(safe-area-inset-left);
  padding-right: env(safe-area-inset-right);
  -webkit-animation-duration: var(--duration);
  animation-duration: var(--duration);
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
}

@media (min-width: 37.5625em) {
  .emotion-3[data-margin="small"] {
    --margin: 24px;
  }
}

.emotion-3[data-position="top"] {
  top: var(--margin);
  bottom: unset;
}

.emotion-3[data-position="bottom"] {
  bottom: var(--margin);
  top: unset;
}

.emotion-3[data-position="left"] {
  left: var(--margin);
  right: unset;
}

.emotion-3[data-position="right"] {
  right: var(--margin);
  left: unset;
}

.emotion-3[data-size="full"] {
  min-height: 100%;
  min-width: 100%;
  inset: 0;
}

.emotion-3[data-width="xsmall"],
.emotion-3[data-size="xsmall"] {
  width: 300px;
}

.emotion-3[data-width="small"],
.emotion-3[data-size="small"] {
  width: 500px;
}

.emotion-3[data-width="normal"],
.emotion-3[data-size="normal"] {
  width: 700px;
}

.emotion-3[data-width="large"],
.emotion-3[data-size="large"] {
  width: 1100px;
}

.emotion-3[data-width="full"] {
  width: 100%;
  min-width: 100%;
  left: 0;
  right: 0;
}

.emotion-3[data-height="xsmall"] {
  height: 300px;
}

.emotion-3[data-height="small"] {
  height: 500px;
}

.emotion-3[data-height="normal"] {
  height: 700px;
}

.emotion-3[data-height="large"] {
  height: 1100px;
}

.emotion-3[data-height="full"] {
  height: 100%;
  min-height: 100%;
  top: 0;
  bottom: 0;
}

.emotion-3[data-expands="true"] {
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  height: -webkit-min-content;
  height: -moz-min-content;
  height: min-content;
  max-width: 100%;
  max-height: 100%;
}

.emotion-3[data-animation-name="fade"][data-state="open"] {
  -webkit-animation-name: modalFadeIn;
  animation-name: modalFadeIn;
}

.emotion-3[data-animation-name="fade"][data-state="closed"] {
  -webkit-animation-name: modalFadeOut;
  animation-name: modalFadeOut;
}

.emotion-3[data-animation-name="zoom"][data-state="open"] {
  -webkit-animation-name: modalZoomIn;
  animation-name: modalZoomIn;
}

.emotion-3[data-animation-name="zoom"][data-state="closed"] {
  -webkit-animation-name: modalZoomOut;
  animation-name: modalZoomOut;
}

.emotion-3[data-animation-name="subtle"][data-state="open"] {
  -webkit-animation-name: modalSubtleIn;
  animation-name: modalSubtleIn;
}

.emotion-3[data-animation-name="subtle"][data-state="closed"] {
  -webkit-animation-name: modalSubtleOut;
  animation-name: modalSubtleOut;
}

.emotion-3[data-animation-name="slideIn"][data-position="top"][data-state="open"] {
  -webkit-animation-name: modalSlideTopIn;
  animation-name: modalSlideTopIn;
}

.emotion-3[data-animation-name="slideIn"][data-position="top"][data-state="closed"] {
  -webkit-animation-name: modalSlideTopOut;
  animation-name: modalSlideTopOut;
}

.emotion-3[data-animation-name="slideIn"][data-position="right"][data-state="open"] {
  -webkit-animation-name: modalSlideRightIn;
  animation-name: modalSlideRightIn;
}

.emotion-3[data-animation-name="slideIn"][data-position="right"][data-state="closed"] {
  -webkit-animation-name: modalSlideRightOut;
  animation-name: modalSlideRightOut;
}

.emotion-3[data-animation-name="slideIn"][data-position="bottom"][data-state="open"] {
  -webkit-animation-name: modalSlideBottomIn;
  animation-name: modalSlideBottomIn;
}

.emotion-3[data-animation-name="slideIn"][data-position="bottom"][data-state="closed"] {
  -webkit-animation-name: modalSlideBottomOut;
  animation-name: modalSlideBottomOut;
}

.emotion-3[data-animation-name="slideIn"][data-position="left"][data-state="open"] {
  -webkit-animation-name: modalSlideLeftIn;
  animation-name: modalSlideLeftIn;
}

.emotion-3[data-animation-name="slideIn"][data-position="left"][data-state="closed"] {
  -webkit-animation-name: modalSlideLeftOut;
  animation-name: modalSlideLeftOut;
}

@media (max-width: 37.5625em) {
  .emotion-3 {
    min-width: 100%;
    min-height: 100%;
  }
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
  padding: 24px;
}

.emotion-5[data-severity="success"] {
  background-color: #5cbc80;
  color: #fff;
}

.emotion-5[data-severity="info"] {
  background-color: #fff;
  color: #444;
}

.emotion-5[data-severity="warning"] {
  background-color: #ead854;
  color: #444;
}

.emotion-5[data-severity="danger"] {
  background-color: #d1372e;
  color: #fff;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-6 h1 {
  color: #fff;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  padding: 24px;
}

.emotion-7 h1 {
  margin: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 700;
  font-size: 22px;
  font-size: 1.2222222222222223rem;
  line-height: 1.2;
  color: #444;
}

.emotion-7 h1:where([lang='zh'], .emotion-7 h1[lang='zh-Hans'], [lang='zh-Hant']):not([data-pinyin]) {
  font-size: calc(22px * 1.11);
  font-size: calc(1.2222222222222223rem * 1.11);
}

.emotion-9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0;
  color: #fff;
}

.emotion-9[data-severity="info"] {
  color: #444;
}

.emotion-9[data-severity="warning"] {
  color: #444;
}

.emotion-10 svg {
  color: #fff;
}

.emotion-10 svg[data-severity="info"] {
  color: #444;
}

.emotion-10 svg[data-severity="warning"] {
  color: #444;
}

.emotion-10:hover,
.emotion-10:focus,
.emotion-10:focus-within,
.emotion-10:focus-visible {
  background-color: #fff;
}

.emotion-10:hover svg,
.emotion-10:focus svg,
.emotion-10:focus-within svg,
.emotion-10:focus-visible svg {
  color: #20588f;
}

.emotion-11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6px;
  color: #20588f;
  background: #deebf6;
  border: 2px solid #deebf6;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4px 6px;
  font-size: 14px;
  font-size: 0.7777777777777778rem;
  line-height: 18px;
  min-height: 32px;
  border-width: 1px;
  outline-width: 2px;
  color: #20588f;
  background: transparent;
  border-color: transparent;
  border-radius: 100%;
  padding: 6px;
  line-height: 1;
  border-color: transparent;
  min-height: unset;
}

.emotion-11:hover,
.emotion-11:focus-visible {
  color: #fff;
  background-color: #20588f;
  border-color: #20588f;
}

.emotion-11[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-11:where([lang='zh'], .emotion-11[lang='zh-Hans'], [lang='zh-Hant']):not([data-pinyin]) {
  font-size: calc(14px * 1.11);
  font-size: calc(0.7777777777777778rem * 1.11);
}

.emotion-11:hover,
.emotion-11:active,
.emotion-11:focus-visible {
  color: #20588f;
  background: #deebf6;
  border-color: #deebf6;
}

.emotion-11[disabled] {
  color: #777777;
  background-color: transparent;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-11 svg {
  width: 24px;
  height: 24px;
  margin: 0;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
}

.emotion-13 {
  width: 27px;
  height: 27px;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin-top: 12px;
}

<body
  style="pointer-events: none;"
>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <div
      class="emotion-0"
    />
  </div>
  <div
    aria-hidden="true"
    class="emotion-1 emotion-2"
    data-aria-hidden="true"
    data-state="open"
    style="pointer-events: auto; --duration: 400ms;"
  />
  <div
    aria-describedby="radix-:r2:"
    aria-labelledby="radix-:r1:"
    class="emotion-3 emotion-4"
    data-animation-name="zoom"
    data-margin="small"
    data-position="center"
    data-size="normal"
    data-state="open"
    id="radix-:r0:"
    role="dialog"
    style="--duration: 400ms; pointer-events: auto;"
    tabindex="-1"
  >
    <div
      class="emotion-5"
      data-severity="danger"
      data-testid="alert-modal"
    >
      <div
        class="emotion-6 emotion-7 emotion-8"
        data-testid="modal-header"
      >
        <h1
          class="emotion-9"
          data-severity="danger"
        >
          Pass på!
        </h1>
        <button
          aria-label="Lukk"
          class="emotion-10 emotion-11"
          data-testid="closeAlert"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="d_inline-block fill_currentcolor va_middle lh_1em flex-sh_0 w_medium h_medium"
            data-icon=""
            data-license="Apache License 2.0"
            data-severity="danger"
            data-source="RemixIcon"
            fill="currentColor"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="m12 10.59 4.95-4.95 1.41 1.41L13.41 12l4.95 4.95-1.41 1.41L12 13.41l-4.95 4.95-1.41-1.41L10.59 12 5.64 7.05l1.41-1.41z"
            />
          </svg>
        </button>
      </div>
      <div
        class="emotion-12"
      >
        <svg
          aria-hidden="true"
          class="d_inline-block fill_currentcolor va_middle lh_1em flex-sh_0 w_medium h_medium emotion-13"
          data-icon=""
          data-license="Apache License 2.0"
          data-source="Material Design"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm1-5a10 10 0 1 0 0 20 10 10 0 0 0 0-20m0 18a8 8 0 1 1 0-16 8 8 0 0 1 0 16"
          />
        </svg>
        Testmessage
      </div>
      <div
        class="emotion-14"
      />
    </div>
  </div>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;

exports[`Messages > Several messages renders correctly 1`] = `
.emotion-0 {
  position: fixed;
  width: 80%;
  max-width: 800px;
  top: 50px;
  left: 0;
  right: 0;
  z-index: 500;
  margin: 0 auto;
}

.emotion-1 {
  position: fixed;
  inset: 0;
  background: rgba(1, 1, 1, 0.3);
  z-index: 499;
  -webkit-animation-duration: var(--duration);
  animation-duration: var(--duration);
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
}

.emotion-1[data-state="open"] {
  -webkit-animation-name: overlayFadeIn;
  animation-name: overlayFadeIn;
}

.emotion-1[data-state="closed"] {
  -webkit-animation-name: overlayFadeOut;
  animation-name: overlayFadeOut;
}

.emotion-3 {
  --margin: 0px;
  position: fixed;
  inset: 0;
  margin: auto;
  z-index: 500;
  height: -webkit-min-content;
  height: -moz-min-content;
  height: min-content;
  max-height: 85%;
  max-width: 95%;
  overflow-y: auto;
  background-color: #fff;
  padding-bottom: env(safe-area-inset-bottom);
  padding-top: env(safe-area-inset-top);
  padding-left: env(safe-area-inset-left);
  padding-right: env(safe-area-inset-right);
  -webkit-animation-duration: var(--duration);
  animation-duration: var(--duration);
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
}

@media (min-width: 37.5625em) {
  .emotion-3[data-margin="small"] {
    --margin: 24px;
  }
}

.emotion-3[data-position="top"] {
  top: var(--margin);
  bottom: unset;
}

.emotion-3[data-position="bottom"] {
  bottom: var(--margin);
  top: unset;
}

.emotion-3[data-position="left"] {
  left: var(--margin);
  right: unset;
}

.emotion-3[data-position="right"] {
  right: var(--margin);
  left: unset;
}

.emotion-3[data-size="full"] {
  min-height: 100%;
  min-width: 100%;
  inset: 0;
}

.emotion-3[data-width="xsmall"],
.emotion-3[data-size="xsmall"] {
  width: 300px;
}

.emotion-3[data-width="small"],
.emotion-3[data-size="small"] {
  width: 500px;
}

.emotion-3[data-width="normal"],
.emotion-3[data-size="normal"] {
  width: 700px;
}

.emotion-3[data-width="large"],
.emotion-3[data-size="large"] {
  width: 1100px;
}

.emotion-3[data-width="full"] {
  width: 100%;
  min-width: 100%;
  left: 0;
  right: 0;
}

.emotion-3[data-height="xsmall"] {
  height: 300px;
}

.emotion-3[data-height="small"] {
  height: 500px;
}

.emotion-3[data-height="normal"] {
  height: 700px;
}

.emotion-3[data-height="large"] {
  height: 1100px;
}

.emotion-3[data-height="full"] {
  height: 100%;
  min-height: 100%;
  top: 0;
  bottom: 0;
}

.emotion-3[data-expands="true"] {
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  height: -webkit-min-content;
  height: -moz-min-content;
  height: min-content;
  max-width: 100%;
  max-height: 100%;
}

.emotion-3[data-animation-name="fade"][data-state="open"] {
  -webkit-animation-name: modalFadeIn;
  animation-name: modalFadeIn;
}

.emotion-3[data-animation-name="fade"][data-state="closed"] {
  -webkit-animation-name: modalFadeOut;
  animation-name: modalFadeOut;
}

.emotion-3[data-animation-name="zoom"][data-state="open"] {
  -webkit-animation-name: modalZoomIn;
  animation-name: modalZoomIn;
}

.emotion-3[data-animation-name="zoom"][data-state="closed"] {
  -webkit-animation-name: modalZoomOut;
  animation-name: modalZoomOut;
}

.emotion-3[data-animation-name="subtle"][data-state="open"] {
  -webkit-animation-name: modalSubtleIn;
  animation-name: modalSubtleIn;
}

.emotion-3[data-animation-name="subtle"][data-state="closed"] {
  -webkit-animation-name: modalSubtleOut;
  animation-name: modalSubtleOut;
}

.emotion-3[data-animation-name="slideIn"][data-position="top"][data-state="open"] {
  -webkit-animation-name: modalSlideTopIn;
  animation-name: modalSlideTopIn;
}

.emotion-3[data-animation-name="slideIn"][data-position="top"][data-state="closed"] {
  -webkit-animation-name: modalSlideTopOut;
  animation-name: modalSlideTopOut;
}

.emotion-3[data-animation-name="slideIn"][data-position="right"][data-state="open"] {
  -webkit-animation-name: modalSlideRightIn;
  animation-name: modalSlideRightIn;
}

.emotion-3[data-animation-name="slideIn"][data-position="right"][data-state="closed"] {
  -webkit-animation-name: modalSlideRightOut;
  animation-name: modalSlideRightOut;
}

.emotion-3[data-animation-name="slideIn"][data-position="bottom"][data-state="open"] {
  -webkit-animation-name: modalSlideBottomIn;
  animation-name: modalSlideBottomIn;
}

.emotion-3[data-animation-name="slideIn"][data-position="bottom"][data-state="closed"] {
  -webkit-animation-name: modalSlideBottomOut;
  animation-name: modalSlideBottomOut;
}

.emotion-3[data-animation-name="slideIn"][data-position="left"][data-state="open"] {
  -webkit-animation-name: modalSlideLeftIn;
  animation-name: modalSlideLeftIn;
}

.emotion-3[data-animation-name="slideIn"][data-position="left"][data-state="closed"] {
  -webkit-animation-name: modalSlideLeftOut;
  animation-name: modalSlideLeftOut;
}

@media (max-width: 37.5625em) {
  .emotion-3 {
    min-width: 100%;
    min-height: 100%;
  }
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
  padding: 24px;
}

.emotion-5[data-severity="success"] {
  background-color: #5cbc80;
  color: #fff;
}

.emotion-5[data-severity="info"] {
  background-color: #fff;
  color: #444;
}

.emotion-5[data-severity="warning"] {
  background-color: #ead854;
  color: #444;
}

.emotion-5[data-severity="danger"] {
  background-color: #d1372e;
  color: #fff;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-6 h1 {
  color: #fff;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  padding: 24px;
}

.emotion-7 h1 {
  margin: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 700;
  font-size: 22px;
  font-size: 1.2222222222222223rem;
  line-height: 1.2;
  color: #444;
}

.emotion-7 h1:where([lang='zh'], .emotion-7 h1[lang='zh-Hans'], [lang='zh-Hant']):not([data-pinyin]) {
  font-size: calc(22px * 1.11);
  font-size: calc(1.2222222222222223rem * 1.11);
}

.emotion-9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0;
  color: #fff;
}

.emotion-9[data-severity="info"] {
  color: #444;
}

.emotion-9[data-severity="warning"] {
  color: #444;
}

.emotion-10 svg {
  color: #fff;
}

.emotion-10 svg[data-severity="info"] {
  color: #444;
}

.emotion-10 svg[data-severity="warning"] {
  color: #444;
}

.emotion-10:hover,
.emotion-10:focus,
.emotion-10:focus-within,
.emotion-10:focus-visible {
  background-color: #fff;
}

.emotion-10:hover svg,
.emotion-10:focus svg,
.emotion-10:focus-within svg,
.emotion-10:focus-visible svg {
  color: #20588f;
}

.emotion-11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6px;
  color: #20588f;
  background: #deebf6;
  border: 2px solid #deebf6;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4px 6px;
  font-size: 14px;
  font-size: 0.7777777777777778rem;
  line-height: 18px;
  min-height: 32px;
  border-width: 1px;
  outline-width: 2px;
  color: #20588f;
  background: transparent;
  border-color: transparent;
  border-radius: 100%;
  padding: 6px;
  line-height: 1;
  border-color: transparent;
  min-height: unset;
}

.emotion-11:hover,
.emotion-11:focus-visible {
  color: #fff;
  background-color: #20588f;
  border-color: #20588f;
}

.emotion-11[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-11:where([lang='zh'], .emotion-11[lang='zh-Hans'], [lang='zh-Hant']):not([data-pinyin]) {
  font-size: calc(14px * 1.11);
  font-size: calc(0.7777777777777778rem * 1.11);
}

.emotion-11:hover,
.emotion-11:active,
.emotion-11:focus-visible {
  color: #20588f;
  background: #deebf6;
  border-color: #deebf6;
}

.emotion-11[disabled] {
  color: #777777;
  background-color: transparent;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-11 svg {
  width: 24px;
  height: 24px;
  margin: 0;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
}

.emotion-13 {
  width: 27px;
  height: 27px;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin-top: 12px;
}

<body
  style="pointer-events: none;"
>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <div
      class="emotion-0"
    />
  </div>
  <div
    aria-hidden="true"
    class="emotion-1 emotion-2"
    data-aria-hidden="true"
    data-state="open"
    style="pointer-events: auto; --duration: 400ms;"
  />
  <div
    aria-describedby="radix-:r5:"
    aria-hidden="true"
    aria-labelledby="radix-:r4:"
    class="emotion-3 emotion-4"
    data-animation-name="zoom"
    data-aria-hidden="true"
    data-margin="small"
    data-position="center"
    data-size="normal"
    data-state="open"
    id="radix-:r3:"
    role="dialog"
    style="--duration: 400ms; pointer-events: none;"
    tabindex="-1"
  >
    <div
      class="emotion-5"
      data-severity="danger"
      data-testid="alert-modal"
    >
      <div
        class="emotion-6 emotion-7 emotion-8"
        data-testid="modal-header"
      >
        <h1
          class="emotion-9"
          data-severity="danger"
        >
          Pass på!
        </h1>
        <button
          aria-label="Lukk"
          class="emotion-10 emotion-11"
          data-testid="closeAlert"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="d_inline-block fill_currentcolor va_middle lh_1em flex-sh_0 w_medium h_medium"
            data-icon=""
            data-license="Apache License 2.0"
            data-severity="danger"
            data-source="RemixIcon"
            fill="currentColor"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="m12 10.59 4.95-4.95 1.41 1.41L13.41 12l4.95 4.95-1.41 1.41L12 13.41l-4.95 4.95-1.41-1.41L10.59 12 5.64 7.05l1.41-1.41z"
            />
          </svg>
        </button>
      </div>
      <div
        class="emotion-12"
      >
        <svg
          aria-hidden="true"
          class="d_inline-block fill_currentcolor va_middle lh_1em flex-sh_0 w_medium h_medium emotion-13"
          data-icon=""
          data-license="Apache License 2.0"
          data-source="Material Design"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm1-5a10 10 0 1 0 0 20 10 10 0 0 0 0-20m0 18a8 8 0 1 1 0-16 8 8 0 0 1 0 16"
          />
        </svg>
        Testmessage
      </div>
      <div
        class="emotion-14"
      />
    </div>
  </div>
  <div
    aria-hidden="true"
    class="emotion-1 emotion-2"
    data-aria-hidden="true"
    data-state="open"
    style="pointer-events: auto; --duration: 400ms;"
  />
  <div
    aria-describedby="radix-:r8:"
    aria-hidden="true"
    aria-labelledby="radix-:r7:"
    class="emotion-3 emotion-4"
    data-animation-name="zoom"
    data-aria-hidden="true"
    data-margin="small"
    data-position="center"
    data-size="normal"
    data-state="open"
    id="radix-:r6:"
    role="dialog"
    style="--duration: 400ms; pointer-events: auto;"
    tabindex="-1"
  >
    <div
      class="emotion-5"
      data-severity="danger"
      data-testid="alert-modal"
    >
      <div
        class="emotion-6 emotion-7 emotion-8"
        data-testid="modal-header"
      >
        <h1
          class="emotion-9"
          data-severity="danger"
        >
          Pass på!
        </h1>
        <button
          aria-label="Lukk"
          class="emotion-10 emotion-11"
          data-testid="closeAlert"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="d_inline-block fill_currentcolor va_middle lh_1em flex-sh_0 w_medium h_medium"
            data-icon=""
            data-license="Apache License 2.0"
            data-severity="danger"
            data-source="RemixIcon"
            fill="currentColor"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="m12 10.59 4.95-4.95 1.41 1.41L13.41 12l4.95 4.95-1.41 1.41L12 13.41l-4.95 4.95-1.41-1.41L10.59 12 5.64 7.05l1.41-1.41z"
            />
          </svg>
        </button>
      </div>
      <div
        class="emotion-12"
      >
        <svg
          aria-hidden="true"
          class="d_inline-block fill_currentcolor va_middle lh_1em flex-sh_0 w_medium h_medium emotion-13"
          data-icon=""
          data-license="Apache License 2.0"
          data-source="Material Design"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm1-5a10 10 0 1 0 0 20 10 10 0 0 0 0-20m0 18a8 8 0 1 1 0-16 8 8 0 0 1 0 16"
          />
        </svg>
        Testmessage2
      </div>
      <div
        class="emotion-14"
      />
    </div>
  </div>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;

exports[`Messages > auth0 messages provides a cancel button 1`] = `
.emotion-0 {
  position: fixed;
  width: 80%;
  max-width: 800px;
  top: 50px;
  left: 0;
  right: 0;
  z-index: 500;
  margin: 0 auto;
}

.emotion-1 {
  position: fixed;
  inset: 0;
  background: rgba(1, 1, 1, 0.3);
  z-index: 499;
  -webkit-animation-duration: var(--duration);
  animation-duration: var(--duration);
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
}

.emotion-1[data-state="open"] {
  -webkit-animation-name: overlayFadeIn;
  animation-name: overlayFadeIn;
}

.emotion-1[data-state="closed"] {
  -webkit-animation-name: overlayFadeOut;
  animation-name: overlayFadeOut;
}

.emotion-3 {
  --margin: 0px;
  position: fixed;
  inset: 0;
  margin: auto;
  z-index: 500;
  height: -webkit-min-content;
  height: -moz-min-content;
  height: min-content;
  max-height: 85%;
  max-width: 95%;
  overflow-y: auto;
  background-color: #fff;
  padding-bottom: env(safe-area-inset-bottom);
  padding-top: env(safe-area-inset-top);
  padding-left: env(safe-area-inset-left);
  padding-right: env(safe-area-inset-right);
  -webkit-animation-duration: var(--duration);
  animation-duration: var(--duration);
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-animation-timing-function: ease-in-out;
  animation-timing-function: ease-in-out;
}

@media (min-width: 37.5625em) {
  .emotion-3[data-margin="small"] {
    --margin: 24px;
  }
}

.emotion-3[data-position="top"] {
  top: var(--margin);
  bottom: unset;
}

.emotion-3[data-position="bottom"] {
  bottom: var(--margin);
  top: unset;
}

.emotion-3[data-position="left"] {
  left: var(--margin);
  right: unset;
}

.emotion-3[data-position="right"] {
  right: var(--margin);
  left: unset;
}

.emotion-3[data-size="full"] {
  min-height: 100%;
  min-width: 100%;
  inset: 0;
}

.emotion-3[data-width="xsmall"],
.emotion-3[data-size="xsmall"] {
  width: 300px;
}

.emotion-3[data-width="small"],
.emotion-3[data-size="small"] {
  width: 500px;
}

.emotion-3[data-width="normal"],
.emotion-3[data-size="normal"] {
  width: 700px;
}

.emotion-3[data-width="large"],
.emotion-3[data-size="large"] {
  width: 1100px;
}

.emotion-3[data-width="full"] {
  width: 100%;
  min-width: 100%;
  left: 0;
  right: 0;
}

.emotion-3[data-height="xsmall"] {
  height: 300px;
}

.emotion-3[data-height="small"] {
  height: 500px;
}

.emotion-3[data-height="normal"] {
  height: 700px;
}

.emotion-3[data-height="large"] {
  height: 1100px;
}

.emotion-3[data-height="full"] {
  height: 100%;
  min-height: 100%;
  top: 0;
  bottom: 0;
}

.emotion-3[data-expands="true"] {
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  height: -webkit-min-content;
  height: -moz-min-content;
  height: min-content;
  max-width: 100%;
  max-height: 100%;
}

.emotion-3[data-animation-name="fade"][data-state="open"] {
  -webkit-animation-name: modalFadeIn;
  animation-name: modalFadeIn;
}

.emotion-3[data-animation-name="fade"][data-state="closed"] {
  -webkit-animation-name: modalFadeOut;
  animation-name: modalFadeOut;
}

.emotion-3[data-animation-name="zoom"][data-state="open"] {
  -webkit-animation-name: modalZoomIn;
  animation-name: modalZoomIn;
}

.emotion-3[data-animation-name="zoom"][data-state="closed"] {
  -webkit-animation-name: modalZoomOut;
  animation-name: modalZoomOut;
}

.emotion-3[data-animation-name="subtle"][data-state="open"] {
  -webkit-animation-name: modalSubtleIn;
  animation-name: modalSubtleIn;
}

.emotion-3[data-animation-name="subtle"][data-state="closed"] {
  -webkit-animation-name: modalSubtleOut;
  animation-name: modalSubtleOut;
}

.emotion-3[data-animation-name="slideIn"][data-position="top"][data-state="open"] {
  -webkit-animation-name: modalSlideTopIn;
  animation-name: modalSlideTopIn;
}

.emotion-3[data-animation-name="slideIn"][data-position="top"][data-state="closed"] {
  -webkit-animation-name: modalSlideTopOut;
  animation-name: modalSlideTopOut;
}

.emotion-3[data-animation-name="slideIn"][data-position="right"][data-state="open"] {
  -webkit-animation-name: modalSlideRightIn;
  animation-name: modalSlideRightIn;
}

.emotion-3[data-animation-name="slideIn"][data-position="right"][data-state="closed"] {
  -webkit-animation-name: modalSlideRightOut;
  animation-name: modalSlideRightOut;
}

.emotion-3[data-animation-name="slideIn"][data-position="bottom"][data-state="open"] {
  -webkit-animation-name: modalSlideBottomIn;
  animation-name: modalSlideBottomIn;
}

.emotion-3[data-animation-name="slideIn"][data-position="bottom"][data-state="closed"] {
  -webkit-animation-name: modalSlideBottomOut;
  animation-name: modalSlideBottomOut;
}

.emotion-3[data-animation-name="slideIn"][data-position="left"][data-state="open"] {
  -webkit-animation-name: modalSlideLeftIn;
  animation-name: modalSlideLeftIn;
}

.emotion-3[data-animation-name="slideIn"][data-position="left"][data-state="closed"] {
  -webkit-animation-name: modalSlideLeftOut;
  animation-name: modalSlideLeftOut;
}

@media (max-width: 37.5625em) {
  .emotion-3 {
    min-width: 100%;
    min-height: 100%;
  }
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
  padding: 24px;
}

.emotion-5[data-severity="success"] {
  background-color: #5cbc80;
  color: #fff;
}

.emotion-5[data-severity="info"] {
  background-color: #fff;
  color: #444;
}

.emotion-5[data-severity="warning"] {
  background-color: #ead854;
  color: #444;
}

.emotion-5[data-severity="danger"] {
  background-color: #d1372e;
  color: #fff;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-6 h1 {
  color: #fff;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  padding: 24px;
}

.emotion-7 h1 {
  margin: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  font-weight: 700;
  font-size: 22px;
  font-size: 1.2222222222222223rem;
  line-height: 1.2;
  color: #444;
}

.emotion-7 h1:where([lang='zh'], .emotion-7 h1[lang='zh-Hans'], [lang='zh-Hant']):not([data-pinyin]) {
  font-size: calc(22px * 1.11);
  font-size: calc(1.2222222222222223rem * 1.11);
}

.emotion-9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 0;
  color: #fff;
}

.emotion-9[data-severity="info"] {
  color: #444;
}

.emotion-9[data-severity="warning"] {
  color: #444;
}

.emotion-10 svg {
  color: #fff;
}

.emotion-10 svg[data-severity="info"] {
  color: #444;
}

.emotion-10 svg[data-severity="warning"] {
  color: #444;
}

.emotion-10:hover,
.emotion-10:focus,
.emotion-10:focus-within,
.emotion-10:focus-visible {
  background-color: #fff;
}

.emotion-10:hover svg,
.emotion-10:focus svg,
.emotion-10:focus-within svg,
.emotion-10:focus-visible svg {
  color: #20588f;
}

.emotion-11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6px;
  color: #20588f;
  background: #deebf6;
  border: 2px solid #deebf6;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4px 6px;
  font-size: 14px;
  font-size: 0.7777777777777778rem;
  line-height: 18px;
  min-height: 32px;
  border-width: 1px;
  outline-width: 2px;
  color: #20588f;
  background: transparent;
  border-color: transparent;
  border-radius: 100%;
  padding: 6px;
  line-height: 1;
  border-color: transparent;
  min-height: unset;
}

.emotion-11:hover,
.emotion-11:focus-visible {
  color: #fff;
  background-color: #20588f;
  border-color: #20588f;
}

.emotion-11[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-11:where([lang='zh'], .emotion-11[lang='zh-Hans'], [lang='zh-Hant']):not([data-pinyin]) {
  font-size: calc(14px * 1.11);
  font-size: calc(0.7777777777777778rem * 1.11);
}

.emotion-11:hover,
.emotion-11:active,
.emotion-11:focus-visible {
  color: #20588f;
  background: #deebf6;
  border-color: #deebf6;
}

.emotion-11[disabled] {
  color: #777777;
  background-color: transparent;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-11 svg {
  width: 24px;
  height: 24px;
  margin: 0;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 12px;
}

.emotion-13 {
  width: 27px;
  height: 27px;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin-top: 12px;
}

.emotion-15 {
  background-color: white;
  margin-left: 0;
}

.emotion-15:only-child {
  margin-left: auto;
}

.emotion-16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 6px;
  color: #fff;
  background: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 600;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  padding: 4px 12px;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.5;
  min-height: 40px;
  color: #20588f;
  background: transparent;
  border-color: #20588f;
}

.emotion-16:hover,
.emotion-16:focus-visible {
  color: #20588f;
  background-color: #ceddea;
  border-color: #ceddea;
}

.emotion-16[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-16:where([lang='zh'], .emotion-16[lang='zh-Hans'], [lang='zh-Hant']):not([data-pinyin]) {
  font-size: calc(16px * 1.11);
  font-size: calc(0.8888888888888888rem * 1.11);
}

.emotion-16:hover {
  color: #fff;
  background: #20588f;
  border-color: #20588f;
}

.emotion-16[disabled] {
  color: #777777;
  background-color: transparent;
  border-color: #777777;
  cursor: not-allowed;
}

<body
  style="pointer-events: none;"
>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <div
      class="emotion-0"
    />
  </div>
  <div
    aria-hidden="true"
    class="emotion-1 emotion-2"
    data-aria-hidden="true"
    data-state="open"
    style="pointer-events: auto; --duration: 400ms;"
  />
  <div
    aria-describedby="radix-:re:"
    aria-labelledby="radix-:rd:"
    class="emotion-3 emotion-4"
    data-animation-name="zoom"
    data-margin="small"
    data-position="center"
    data-size="normal"
    data-state="open"
    id="radix-:rc:"
    role="dialog"
    style="--duration: 400ms; pointer-events: auto;"
    tabindex="-1"
  >
    <div
      class="emotion-5"
      data-severity="danger"
      data-testid="alert-modal"
    >
      <div
        class="emotion-6 emotion-7 emotion-8"
        data-testid="modal-header"
      >
        <h1
          class="emotion-9"
          data-severity="danger"
        >
          Pass på!
        </h1>
        <button
          aria-label="Lukk"
          class="emotion-10 emotion-11"
          data-testid="closeAlert"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="d_inline-block fill_currentcolor va_middle lh_1em flex-sh_0 w_medium h_medium"
            data-icon=""
            data-license="Apache License 2.0"
            data-severity="danger"
            data-source="RemixIcon"
            fill="currentColor"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <path
              d="m12 10.59 4.95-4.95 1.41 1.41L13.41 12l4.95 4.95-1.41 1.41L12 13.41l-4.95 4.95-1.41-1.41L10.59 12 5.64 7.05l1.41-1.41z"
            />
          </svg>
        </button>
      </div>
      <div
        class="emotion-12"
      >
        <svg
          aria-hidden="true"
          class="d_inline-block fill_currentcolor va_middle lh_1em flex-sh_0 w_medium h_medium emotion-13"
          data-icon=""
          data-license="Apache License 2.0"
          data-source="Material Design"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm1-5a10 10 0 1 0 0 20 10 10 0 0 0 0-20m0 18a8 8 0 1 1 0-16 8 8 0 0 1 0 16"
          />
        </svg>
        Testmessage
      </div>
      <div
        class="emotion-14"
      >
        <button
          class="emotion-15 emotion-16"
          type="button"
        >
          Avbryt
        </button>
        <button
          class="emotion-15 emotion-16"
          type="button"
        >
          Logg inn på nytt
        </button>
      </div>
    </div>
  </div>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;

exports[`Messages > auth0 messages provides a cancel button 2`] = `
.emotion-0 {
  position: fixed;
  width: 80%;
  max-width: 800px;
  top: 50px;
  left: 0;
  right: 0;
  z-index: 500;
  margin: 0 auto;
  display: none;
}

<body
  style=""
>
  <div>
    <div
      class="emotion-0"
    />
  </div>
</body>
`;
